# bootcamp-python

./: README.md  pyproject.toml  teste.py
bootcamp_python/aula1/: main.py
bootcamp_python/aula2/: exercicios.py
bootcamp_python/aula3/: exercicios.py
bootcamp_python/aula4/: arquivo.csv  main.py
